# lighthouse-rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  deploy-to-crates-io.yml  publish.yml
examples/: black.rs  disco.rs  input_events.rs  sine.rs  snake.rs
lighthouse-client/: Cargo.toml  README.md
lighthouse-client/examples/: admin_crud.rs  admin_get_metrics.rs  admin_list_root.rs  black.rs  direction_events.rs  disco.rs  input_events.rs  list_root.rs  midi_events.rs  snake.rs  stress_test.rs
lighthouse-client/src/: check.rs  constants.rs  error.rs  lib.rs  lighthouse.rs
lighthouse-client/src/connect/: async_std.rs  mod.rs  tokio.rs
lighthouse-client/src/utils/: mod.rs  stream_guard.rs
lighthouse-protocol/: Cargo.toml  README.md
lighthouse-protocol/src/: client_message.rs  constants.rs  frame.rs  input_event.rs  lib.rs  meta.rs  payload.rs  server_message.rs  verb.rs
lighthouse-protocol/src/input/: event_source.rs  gamepad_axis_2d_event.rs  gamepad_axis_event.rs  gamepad_button_event.rs  gamepad_control_event.rs  gamepad_event.rs  input_event.rs  key_event.rs  key_modifiers.rs  legacy.rs  legacy_input_event.rs  midi_event.rs  mod.rs  motion_event.rs  mouse_button.rs  mouse_event.rs  orientation_event.rs  unknown_event.rs
lighthouse-protocol/src/payload/: directory_tree.rs  mod.rs  model.rs
lighthouse-protocol/src/payload/metrics/: laser.rs  mod.rs
lighthouse-protocol/src/utils/: color.rs  direction.rs  mod.rs  rect.rs  rem_euclid.rs  rot3.rs  rotation.rs  sqrt.rs  unity.rs  vec2.rs  vec3.rs
src/: auth.rs  authentication.rs  color.rs  connection.rs  constants.rs  display.rs  error.rs  frame.rs  lib.rs  lighthouse.rs  pos.rs  protocol.rs
src/connect/: async_std.rs  mod.rs  tokio.rs
src/protocol/: client_message.rs  mod.rs  payload.rs  server_message.rs
src/spawn/: async_std.rs  mod.rs  tokio.rs
src/utils/: color.rs  delta.rs  mod.rs  pos.rs  rect.rs  rotation.rs
