[workspace]
members = [
    "lighthouse-client",
    "lighthouse-protocol",
]
default-members = ["lighthouse-client"]
resolver = "2"

[workspace.package]
version = "6.2.2"
edition = "2021"
license = "MIT"

[workspace.dependencies]
lighthouse-protocol = { version = "^6.2.2", path = "lighthouse-protocol" }
