[package]
name = "lighthouse-protocol"
description = "Protocol types for Project Lighthouse"
version = "1.0.4"
edition = "2021"
categories = ["api-bindings"]
repository = "https://github.com/ProjectLighthouseCAU/lighthouse-rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
